Attempt to fix background cover issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@ body {
    background-position: center;
    background-attachment: fixed;
    
-   
+   -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
    
     background-size: cover;
 	
